content(java-jvm): clarity rewrite — synchronized, volatile & the JMM (5/25)
First topic of the java-jvm clarity wave, through the full pilot loop
(brief -> writer -> adversarial verifier + web fact-check -> repair).

Clarity: bold 29.69 -> 1.60 per 1k, paragraphs over the bold cap 15 -> 0,
audience labels 25 -> 0, slot labels 47 -> 0, callouts 0 -> 9 (budget 13),
H2s over 50 lines without a seam 6 -> 0, C4 miss rate 11.11% -> 0.0%,
3 mermaid diagrams added, reading map added. clarity_report FLAGS: none.

Coverage: 8 MCQ-tested mechanisms that had ZERO supporting prose now have
real explanations (roach-motel ordering, lock coarsening, lock elision and
escape analysis, opaque access mode, JEP 171 fences and VarHandle, the mark
word, monitor inflation, out-of-thin-air causality). 68/68 questions.yaml
refs resolve across 9 anchors; all 11 H2 byte-identical (12 H3 additions).

Correctness fixes the loop caught:
- A false universal ("the only edges you can create deliberately between two
  arbitrary threads") that was already copied into ledger claims_established
  and would have been inherited as ESTABLISHED by every later java-jvm topic.
  interrupt(), start() and join() are deliberate inter-thread edges too.
- VarHandle has no getPlain; plain access is get/set (error inherited from
  the base file, corrected rather than carried a third time).
- JLS 17.5.3 DOES define a freeze after each reflective final-field write;
  what it withholds is the reader-side guarantee.
- "properly constructed" is JSR-133 usage, not JLS wording.
- Re-hedged "the JMM does not talk about caches DIRECTLY" (JLS 17.3/17.5 do
  mention caching; the model just defines nothing in those terms).
- UseBiasedLocking: obsoleted in JDK 18, expired in 19; only the
  implementation was removed in 18.
- A HotSpot object header is a mark word plus a class pointer, not two
  machine words.
- The eight happens-before rules span JLS 17.4.4 and 17.4.5, not 17.4.5.
- CAS costs a handful of instructions, not one 